WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280048
testharness.js tests do not work when loaded in cross-origin iframes
https://bugs.webkit.org/show_bug.cgi?id=280048
Summary
testharness.js tests do not work when loaded in cross-origin iframes
Kimmo Kinnunen
Reported
2024-09-20 01:00:28 PDT
testharness.js tests do not work when loaded in cross-origin iframes if (window !== window.top || (orig_opener !== null && orig_opener !== window)) { return; }
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-09-20 01:01:01 PDT
<
rdar://problem/136347990
>
Kimmo Kinnunen
Comment 2
2024-09-20 01:09:45 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33967
EWS
Comment 3
2024-09-23 10:48:45 PDT
Committed
284092@main
(2fa5620a0732): <
https://commits.webkit.org/284092@main
> Reviewed commits have been landed. Closing PR #33967 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug