testharness.js tests do not work when loaded in cross-origin iframes https://bugs.webkit.org/show_bug.cgi?id=280048 rdar://136347990

Reviewed by Alex Christensen.

Add a url parameter inCrossOriginFrame=true to the iframe src that
is used for the WebKitTestRunner cross-origin frame test mode.

The WebKit specific testharnessreport.js contains a filter that no-ops
test completion reports if the test is loaded from an iframe. Avoid
this filter if the document is indeed the main document, loaded from
the cross-origin frame.

Fixes testharness.js test timeouts with run-webkit-tests --site-isolation.

* LayoutTests/resources/testharnessreport.js:
* Tools/WebKitTestRunner/TestInvocation.cpp:
(WTR::TestInvocation::loadTestInCrossOriginIframe):

Canonical link: https://commits.webkit.org/284092@main